--- a/ispy/package.json
+++ b/ispy/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Kabilan108/distil/issues"
   },
-  "homepage": "https://github.com/Kabilan108/distil#readme"
+  "homepage": "https://github.com/Kabilan108/distil#readme",
+  "devDependencies": {
+    "electron": "^28.2.1"
+  }
 }
