--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 transformers = "^4.37.2"
 accelerate = "^0.26.1"
+rich = "^13.7.0"
+loguru = "^0.7.2"
 
 
 [build-system]
