--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@types/wavesurfer.js": "^6.0.12",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.252.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "wavesurfer.js": "^7.9.1"
   },
   "devDependencies": {
+    "@types/node": "^22.13.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -29,11 +36,11 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.17",
-    "url": "^0.11.1",
     "path": "^0.12.7",
+    "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
     "typescript": "^5.0.2",
+    "url": "^0.11.1",
     "vite": "^4.3.9"
   }
 }
