--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,28 +5,19 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
-  - repo: local
+  - repo: https://github.com/biomejs/pre-commit
+    rev: v0.5.0
     hooks:
       - id: biome-check
-        name: Biome Check
-        description: Run Biome linter on staged files
-        entry: npx @biomejs/biome check
-        language: system
-        types: [file]
-        files: \.(js|ts|jsx|tsx)$
+        args: [ --config-path=./biome.json ]
+        additional_dependencies: ["@biomejs/biome@1.9.4"]
 
-      - id: biome-format
-        name: Biome Format
-        description: Run Biome formatter on staged files
-        entry: npx @biomejs/biome format --write
-        language: system
-        types: [file]
-        files: \.(js|ts|jsx|tsx)$
-
+  - repo: local
+    hooks:
       - id: cargo-clippy
         name: Cargo Clippy
         description: Run Rust linter on staged files
-        entry: cd src-tauri && cargo clippy -- -D warnings
+        entry: bash -c 'cd src-tauri && cargo clippy -- -D warnings'
         language: system
         pass_filenames: false
         types: [file]
@@ -35,7 +26,7 @@ repos:
       - id: cargo-fmt
         name: Cargo Format
         description: Run Rust formatter on staged files
-        entry: cd src-tauri && cargo fmt
+        entry: bash -c 'cd src-tauri && cargo fmt'
         language: system
         pass_filenames: false
         types: [file]
