--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "biome check src/",
+    "format": "biome format src/ --write",
+    "format:check": "biome format src/ --write=false",
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
@@ -27,6 +30,7 @@
     "@tauri-apps/plugin-opener": "^2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/node": "^22.13.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
