--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release Dictator App
+name: Release dictator Binary
 
 on:
   push:
@@ -18,37 +18,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          node-version: '18'
-          cache: 'yarn'
+          go-version-file: 'go.mod'
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+      - name: Get version
+        id: version
+        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
-      - name: Install Linux dependencies
+      - name: Build Linux Binary
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-
-      - name: Install dependencies
-        run: yarn install
-
-      - name: Build frontend
-        run: yarn build
-
-      - name: Build Tauri app
-        run: yarn tauri build
+          BINARY_NAME="dictator"
+          go build -ldflags="-s -w -X main.version=${{ steps.version.outputs.version }}" -o $BINARY_NAME .
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GOOS: linux
+          GOARCH: amd64
 
-      - name: Create Release and Upload Binaries
+      - name: Create tarball
+        run: |
+          mkdir -p dictator-linux-amd64/bin
+          cp dictator capscreen-linux-amd64/bin/
+          tar czf dictator-linux-amd64.tar.gz capscreen-linux-amd64
+
+      - name: Create Release and Upload Assets
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            src-tauri/target/release/bundle/deb/*.deb
-            src-tauri/target/release/bundle/appimage/*.AppImage
-            src-tauri/target/release/bundle/rpm/*.rpm
+            dictator-linux-amd64.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
