--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,3 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Python
-*.pyc
-*.pyo
-*.pyd
-__pycache__
-.venv/
-venv/
-
-# Environment
 .env
-.env.local
-.env.development
-.env.test
-.env.production
 
-build/bin
-bin/
-models/
-data/
-
-src-tauri/target/
-src-tauri/gen/schemas
-.vite/
+build/
