--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,53 +1,109 @@
-name: Release dump Binary
+name: Release on Version Change
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [ master ]
   workflow_dispatch:
+
+concurrency:
+  group: release
+  cancel-in-progress: false
 
 permissions:
   contents: write
+  packages: write
 
 jobs:
+  check-version:
+    runs-on: ubuntu-latest
+    outputs:
+      current_version: ${{ steps.get_version.outputs.version }}
+      should_release: ${{ steps.check.outputs.should_release }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v4
+
+      - name: Get current version from flake
+        id: get_version
+        run: |
+          VERSION=$(nix eval .#default.version --raw)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Current version: $VERSION"
+
+      - name: Get latest tag
+        id: get_tag
+        run: |
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          echo "latest_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+          echo "Latest tag: $LATEST_TAG"
+
+      - name: Check if version changed
+        id: check
+        run: |
+          CURRENT="${{ steps.get_version.outputs.version }}"
+          LATEST="${{ steps.get_tag.outputs.latest_tag }}"
+
+          # Remove 'v' prefix from tag if present
+          LATEST=${LATEST#v}
+
+          if [ "$CURRENT" != "$LATEST" ]; then
+            echo "should_release=true" >> $GITHUB_OUTPUT
+            echo "Version changed: $LATEST -> $CURRENT"
+          else
+            echo "should_release=false" >> $GITHUB_OUTPUT
+            echo "No version change detected"
+          fi
+
   build-and-release:
-    name: Build and Release for Linux
+    needs: check-version
+    if: needs.check-version.outputs.should_release == 'true'
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
+      - uses: actions/checkout@v4
         with:
-          go-version-file: 'go.mod'
+          fetch-depth: 0
 
-      - name: Install system dependencies
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v4
+
+      - name: Build binary with Nix
         run: |
-          sudo apt-get update
-          sudo apt-get install -y pkg-config portaudio19-dev
+          nix build .#default -L
 
-      - name: Verify PortAudio installation
+      - name: Prepare release assets
         run: |
-          pkg-config --exists portaudio-2.0
-          pkg-config --cflags portaudio-2.0
-          pkg-config --libs portaudio-2.0
+          mkdir -p release-assets
+          cp result/bin/dictator release-assets/dictator-x86_64-linux
+          chmod +x release-assets/dictator-x86_64-linux
 
-      - name: Create build directory
-        run: mkdir -p build
-
-      - name: Build and package release
+      - name: Create and push tag
         run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          make release VERSION=${VERSION}
-        env:
-          GOOS: linux
-          GOARCH: amd64
+          VERSION="${{ needs.check-version.outputs.current_version }}"
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git tag -a "v$VERSION" -m "Release v$VERSION"
+          git push origin "v$VERSION"
 
-      - name: Create Release and Upload Assets
-        uses: softprops/action-gh-release@v2
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
         with:
-          files: dictator-linux-amd64.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: v${{ needs.check-version.outputs.current_version }}
+          name: Release v${{ needs.check-version.outputs.current_version }}
+          body: |
+            Automated release for version ${{ needs.check-version.outputs.current_version }}
+
+            ## Changes
+            - Built with Nix flake
+            - x86_64-linux binary included
+
+            ## Installation
+            Download the `dictator-x86_64-linux` binary and place it in your PATH.
+          files: |
+            release-assets/dictator-x86_64-linux
+          draft: false
+          prerelease: false
