--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,24 +28,12 @@ jobs:
           fetch-depth: 0
 
       - name: Notify Workflow Started
-        run: |
-          curl -H "Content-Type: application/json" \
-            -d '{
-              "embeds": [{
-                "title": "Release Workflow Started",
-                "description": "Checking for version changes in ${{ github.repository }}",
-                "color": 3447003,
-                "fields": [
-                  {"name": "Repository", "value": "${{ github.repository }}", "inline": true},
-                  {"name": "Branch", "value": "${{ github.ref_name }}", "inline": true},
-                  {"name": "Commit", "value": "${{ github.sha }}", "inline": true},
-                  {"name": "Workflow", "value": "${{ github.workflow }}", "inline": true}
-                ],
-                "footer": {"text": "GitHub Actions"},
-                "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%S.%3NZ)'"
-              }]
-            }' \
-            ${{ env.DISCORD_WEBHOOK }}
+        uses: Kabilan108/actions/discord-notify@v1
+        with:
+          webhook-url: ${{ env.DISCORD_WEBHOOK }}
+          title: Release Workflow Started
+          description: Checking for version changes in ${{ github.repository }}
+          level: info
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@v4
@@ -82,34 +70,13 @@ jobs:
           fi
 
       - name: Notify Version Check Complete
-        run: |
-          if [ "${{ steps.check.outputs.should_release }}" == "true" ]; then
-            COLOR=10181038
-            TITLE="Version Change Detected - Release Starting"
-            DESCRIPTION="New version ${{ steps.get_version.outputs.version }} will be released"
-          else
-            COLOR=16776960
-            TITLE="No Release Needed"
-            DESCRIPTION="Version ${{ steps.get_version.outputs.version }} matches latest tag"
-          fi
-
-          curl -H "Content-Type: application/json" \
-            -d '{
-              "embeds": [{
-                "title": "'"$TITLE"'",
-                "description": "'"$DESCRIPTION"'",
-                "color": '$COLOR',
-                "fields": [
-                  {"name": "Repository", "value": "${{ github.repository }}", "inline": true},
-                  {"name": "Current Version", "value": "${{ steps.get_version.outputs.version }}", "inline": true},
-                  {"name": "Latest Tag", "value": "${{ steps.get_tag.outputs.latest_tag }}", "inline": true},
-                  {"name": "Release Needed", "value": "${{ steps.check.outputs.should_release }}", "inline": true}
-                ],
-                "footer": {"text": "GitHub Actions"},
-                "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%S.%3NZ)'"
-              }]
-            }' \
-            ${{ env.DISCORD_WEBHOOK }}
+        if: always()
+        uses: Kabilan108/actions/discord-notify@v1
+        with:
+          webhook-url: ${{ env.DISCORD_WEBHOOK }}
+          title: ${{ steps.check.outputs.should_release == 'true' && 'Version Change Detected - Release Starting' || 'No Release Needed' }}
+          description: ${{ steps.check.outputs.should_release == 'true' && format('New version {0} will be released', steps.get_version.outputs.version) || format('Version {0} matches latest tag', steps.get_version.outputs.version) }}
+          level: ${{ steps.check.outputs.should_release == 'true' && 'info' || 'warn' }}
 
   build-and-release:
     needs: check-version
@@ -122,24 +89,12 @@ jobs:
           fetch-depth: 0
 
       - name: Notify Release Started
-        run: |
-          curl -H "Content-Type: application/json" \
-            -d '{
-              "embeds": [{
-                "title": "Building Release v${{ needs.check-version.outputs.current_version }}",
-                "description": "Starting build process for ${{ github.repository }}",
-                "color": 10181038,
-                "fields": [
-                  {"name": "Repository", "value": "${{ github.repository }}", "inline": true},
-                  {"name": "Version", "value": "v${{ needs.check-version.outputs.current_version }}", "inline": true},
-                  {"name": "Branch", "value": "${{ github.ref_name }}", "inline": true},
-                  {"name": "Commit", "value": "${{ github.sha }}", "inline": true}
-                ],
-                "footer": {"text": "GitHub Actions"},
-                "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%S.%3NZ)'"
-              }]
-            }' \
-            ${{ env.DISCORD_WEBHOOK }}
+        uses: Kabilan108/actions/discord-notify@v1
+        with:
+          webhook-url: ${{ env.DISCORD_WEBHOOK }}
+          title: Building Release v${{ needs.check-version.outputs.current_version }}
+          description: Starting build process for ${{ github.repository }}
+          level: info
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@v4
@@ -182,21 +137,22 @@ jobs:
           prerelease: false
 
       - name: Notify Release Complete
-        run: |
-          curl -H "Content-Type: application/json" \
-            -d '{
-              "embeds": [{
-                "title": "Release v${{ needs.check-version.outputs.current_version }} Complete",
-                "description": "Successfully released ${{ github.repository }}",
-                "color": 65280,
-                "fields": [
-                  {"name": "Repository", "value": "${{ github.repository }}", "inline": true},
-                  {"name": "Version", "value": "v${{ needs.check-version.outputs.current_version }}", "inline": true},
-                  {"name": "Release URL", "value": "[Download Here](https://github.com/${{ github.repository }}/releases/tag/v${{ needs.check-version.outputs.current_version }})", "inline": true},
-                  {"name": "Branch", "value": "${{ github.ref_name }}", "inline": true}
-                ],
-                "footer": {"text": "GitHub Actions"},
-                "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%S.%3NZ)'"
-              }]
-            }' \
-            ${{ env.DISCORD_WEBHOOK }}
+        uses: Kabilan108/actions/discord-notify@v1
+        with:
+          webhook-url: ${{ env.DISCORD_WEBHOOK }}
+          title: Release v${{ needs.check-version.outputs.current_version }} Complete
+          description: Successfully released ${{ github.repository }}
+          level: success
+
+  notify-failure:
+    needs: [check-version, build-and-release]
+    if: failure()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify Workflow Failed
+        uses: Kabilan108/actions/discord-notify@v1
+        with:
+          webhook-url: ${{ env.DISCORD_WEBHOOK }}
+          title: Release Workflow Failed
+          description: The release workflow encountered an error
+          level: error
